force-app/main/default/objects/Boardstore_Cart_Line__c/Boardstore_Cart_Line__c.object-meta.xml
<CustomObject>
    <label>Boardstore Cart Line</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Cart Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boardstore Cart Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>