force-app/main/default/objects/Boardstore_Cart_Line__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <description>The snowboard selected</description>
    <label>Board</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Boardstore Cart Lines</relationshipLabel>
    <relationshipName>Boardstore_Cart_Lines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>