force-app/main/default/objects/Boardstore_Cart_Line__c/fields/Boardstore_Cart__c.field-meta.xml
<CustomField>
    <fullName>Boardstore_Cart__c</fullName>
    <label>Boardstore Cart</label>
    <referenceTo>Boardstore_Cart__c</referenceTo>
    <relationshipLabel>Boardstore Cart Lines</relationshipLabel>
    <relationshipName>Boardstore_Cart_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>