force-app/main/default/objects/Boardstore_Cart_Line__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This is a value that is inserted (as opposed to referenced) here as the price may change on the board after the cart is created/completed.</description>
    <label>Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>